- [study] study endpoints folded by default; - [study] expand all / collapse all features added. (Issue #33).

--- a/styles/jtoxkit.css
+++ b/styles/jtoxkit.css
@@ -120,3 +120,7 @@
 .jtox-hidden {
   display: none !important;
 }
+
+.jtox-toolkit .float-right {
+	float: right !important;
+}
