--- a/www/jtoxkit.css
+++ b/www/jtoxkit.css
@@ -194,6 +194,11 @@ div.jtox-study-tab.ui-tabs-panel {
   height: 100%;
 }
 
+div.jtox-study-tab div button {
+	font-size: 80%;
+	padding:4px 8px 4px 8px;
+}
+
 div.jtox-study-tab .dataTables_wrapper {
   overflow: hidden;  
   width: 100%;
@@ -347,4 +352,8 @@ td.jtox-multi table {
 
 .jtox-hidden {
   display: none !important;
+}
+
+.jtox-toolkit .float-right {
+	float: right !important;
 }
